--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.0",
+    "canvas": "^2.11.2",
+    "glob": "^10.3.10",
+    "tsx": "^4.7.0"
+  },
+  "bin": {
+    "myslo-export": "./src/cli.ts"
   }
 }
